Some small changes

--- a/finalexam.tex
+++ b/finalexam.tex
@@ -51,7 +51,7 @@ Due: 5/19/17
 	
 	\item Prove that $\mathbb{Z}[i]$ is a Euclidean domain.
 	
-	\Proof Define $d: \mathbb{Z}[i]-\{0\} \to \mathbb{N}$ by $d(a+bi)=a^2+b^2$ for all $a+bi \in \mathbb{Z}[i]-\{0\}$. Let $(a+bi),(c+di) \in \mathbb{Z}[i]-\{0\}$. Then	
+	\Proof Define $d: \mathbb{Z}[i]-\{0\} \to \mathbb{N}$ by $d(a+bi)=a^2+b^2$ for all $a+bi \in \mathbb{Z}[i]-\{0\}$. Let $(a+bi),(c+di) \in \mathbb{Z}[i]-\{0\}$. Now since $d$ is the modulus function for Gaussian integers, we know it is multiplicative. Hence
 	\[
 		\begin{split}
 			d((a+bi)(c+di))&=d(a+bi) \cdot d(c+di) \\
